Make 2 up book.

--- a/book/Makefile
+++ b/book/Makefile
@@ -3,6 +3,7 @@ all:
 		--prefix dpc-prefix.tex \
 		--style dpc-style.tex dpc.scrbl
 	xelatex dpc; xelatex dpc
+	pdfnup --nup '2x1' dpc.pdf --outfile dpc-2up.pdf
 
 clean:
 	-rm *~ *log *aux *out *toc pict*png
