--- a/book/Makefile
+++ b/book/Makefile
@@ -1,9 +1,15 @@
-all:
+all: pdf html
+
+pdf:
 	env STUDENTS=1 raco scribble --latex \
 		--prefix dpc-prefix.tex \
 		--style dpc-style.tex dpc.scrbl
 	xelatex dpc; xelatex dpc
 	pdfnup --nup '2x1' dpc.pdf --outfile dpc-2up.pdf
+
+html:
+	env STUDENTS=1 raco scribble --html \
+		 dpc.scrbl
 
 clean:
 	-rm *~ *log *aux *out *toc pict*png
