--- a/book/Makefile
+++ b/book/Makefile
@@ -1,13 +1,20 @@
-all: pdf html
+all: dpc.pdf dpc-2up.pdf dpc.html
 
-pdf:
+scrbls := $(wildcard *.scrbl)
+
+dpc.tex: $(scrbls)
+	env STUDENTS=1 raco make dpc.scrbl
 	env STUDENTS=1 raco scribble --latex \
 		--prefix dpc-prefix.tex \
 		--style dpc-style.tex dpc.scrbl
+
+dpc.pdf: dpc.tex
 	xelatex dpc; xelatex dpc
+
+dpc-2up.pdf: dpc.pdf
 	pdfnup --nup '2x1' dpc.pdf --outfile dpc-2up.pdf
 
-html:
+dpc.html: $(scrbls)
 	env STUDENTS=1 raco scribble --html \
 		 dpc.scrbl
 
