Make raco a parameter in Makefile.

--- a/book/Makefile
+++ b/book/Makefile
@@ -1,3 +1,5 @@
+RACO=raco
+
 all: class dpc.pdf dpc-2up.pdf dpc.html
 
 scrbls := $(wildcard *.scrbl) \
@@ -7,11 +9,11 @@ scrbls := $(wildcard *.scrbl) \
 	$(wildcard solution/*.scrbl)
 
 class:
-	raco setup class
+	$(RACO) setup class
 
 dpc.tex: $(scrbls) dpc-prefix.tex dpc-style.tex
-	env STUDENTS=1 raco make dpc.scrbl
-	env STUDENTS=1 raco scribble --latex \
+	env STUDENTS=1 $(RACO) make dpc.scrbl
+	env STUDENTS=1 $(RACO) scribble --latex \
 		++xref-in setup/xref load-collections-xref \
 		--prefix dpc-prefix.tex \
 		--style dpc-style.tex \
@@ -24,7 +26,7 @@ dpc-2up.pdf: dpc.pdf
 	pdfnup --nup '2x1' dpc.pdf --outfile dpc-2up.pdf
 
 dpc.html: $(scrbls)
-	env STUDENTS=1 raco scribble --html \
+	env STUDENTS=1 $(RACO) scribble --html \
 		++xref-in setup/xref load-collections-xref \
 		dpc.scrbl
 
