Add Racket 6.2 to build matrix.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
     - RACKET_DIR=~/racket
   matrix:
     - RACKET_VERSION=5.3.5
+    - RACKET_VERSION=6.2
 
 before_install:
  - git clone https://github.com/greghendershott/travis-racket.git
